--- a/css/main.css
+++ b/css/main.css
@@ -56,10 +56,15 @@
 	height:15px;
 }
 
-/* The LCD (canvas) of the calculator */
+/* 
+	The LCD (canvas) of the calculator. Dimensions are in terms of element size
+	on the page. Pixel dimensions are in the HTML document. (96x64)
+*/
 #LCD {
 	margin-left:15px;
 	border:1px solid white;
+	width:320px;
+	height:240px;
 }
 
 /* Special buttons */
